# gxabm

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  PR340.md  README.md  Release.md  SESSION_NOTES_325.md  SESSION_NOTES_340.md  abm.py  bootstrap.py  bootstrap.sh  bug_test.py  bump  killall.sh  menu.yml  open_issue.sh  parser.py  profile-sample.yml  profiles-sample.yml  pyproject.toml  release.sh  requirements.txt  run_workflow.py  setup.py  setup.sh  uploader.py  wait_for.sh  workflow.py
.github/disabled/: devrelease.yml  pypi.yml  (+1 more)
abm/: VERSION  __init__.py  __main__.py  benchmark.py  common.py  config.py  dataset.py  folder.py  helm.py  histories.yml  history.py  job.py  kubectl.py  library.py  menu.yml  workflow.py
abm-bootstrap/: __main__.py
benchmarks/: dna-named-1.yml  dna-named-2.yml  dna-single-benchmark.yml  named-rna-seq.yml
bootstrap-config/: rna-seq.yml  terra-example.yml  test.yaml
config/: dna-named.yml  dna.yml  dna2.yml  example.yml  named-rna-seq-sr.yml  paired-dna.yml  rna-seq.yml
experiments/: README.md  default.yml  dna-single-benchmark.yml  gcp-n1.yml  large.yml  medium.yml  quad.yml  xlarge.yml
lib/: __init__.py  benchmark.py  common.py  config.py  dataset.py  experiment.py  folder.py  helm.py  histories.yml  history.py  job.py  kubectl.py  library.py  menu.yml  users.py  workflow.py
rules/: 16x32.yml  4x8.yml  8x16.yml
samples/: datasets.yml  experiment.yaml  profile.yml  workflows.yml
test/: __init__.py  terra_connectivity_test.py  terra_poc.py  test_config.py  test_environments.py  test_terra_integration.py
(+29 files in other folders)
